--- a/prepros.cfg
+++ b/prepros.cfg
@@ -6,7 +6,7 @@
     "data": {
       "id": "",
       "cfgVersion": 2,
-      "name": "oferta lunara carpatsoft",
+      "name": "oferta-rate",
       "path": "",
       "files": {
         "58393671": {
@@ -46,10 +46,28 @@
           "parents": [],
           "type": "jade"
         },
+        "4e0f53d3": {
+          "id": "4e0f53d3",
+          "path": "responsive.sass",
+          "output": "_site/responsive.css",
+          "name": "responsive.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
         "7b6ffc15": {
           "id": "7b6ffc15",
           "path": "style.sass",
-          "output": "_site/style.css",
+          "output": "style.sass",
           "name": "style.sass",
           "category": "CSS",
           "autoCompile": true,
@@ -63,6 +81,76 @@
           "imported": false,
           "parents": [],
           "type": "sass"
+        },
+        "78530fea": {
+          "id": "78530fea",
+          "path": "_site/contactengine.php",
+          "output": "_site/contactengine.php",
+          "name": "contactengine.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "b2b75cb2": {
+          "id": "b2b75cb2",
+          "path": "_site/contactthanks.php",
+          "output": "_site/contactthanks.php",
+          "name": "contactthanks.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "01df7428": {
+          "id": "01df7428",
+          "path": "_site/responsive.css",
+          "output": "_site/responsive-dist.css",
+          "name": "responsive.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "16d433f8": {
+          "id": "16d433f8",
+          "path": "_site/jquery.js",
+          "output": "_site/jquery-dist.js",
+          "name": "jquery.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "ff66e205": {
+          "id": "ff66e205",
+          "path": "_site/script.js",
+          "output": "_site/script-dist.js",
+          "name": "script.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         },
         "16e38641": {
           "id": "16e38641",
@@ -80,6 +168,17 @@
           "parents": [],
           "type": "css"
         },
+        "32a20782": {
+          "id": "32a20782",
+          "path": "_site/thank-you.html",
+          "output": "_site/thank-you.html",
+          "name": "thank-you.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
         "6665bb17": {
           "id": "6665bb17",
           "path": "_site/img/2-pizza.png",
@@ -93,121 +192,15 @@
           "height": 0,
           "width": 0
         },
-        "b63e775a": {
-          "id": "b63e775a",
-          "path": "_site/img/check.png",
-          "output": "_site/img/check.png",
-          "name": "check.png",
+        "ce6dccf1": {
+          "id": "ce6dccf1",
+          "path": "_site/img/20-reducere-clienti-noi.png",
+          "output": "_site/img/20-reducere-clienti-noi.png",
+          "name": "20-reducere-clienti-noi.png",
           "category": "IMAGE",
-          "size": 18610,
+          "size": 47630,
           "type": "png",
-          "initialSize": 18610,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "3d53003f": {
-          "id": "3d53003f",
-          "path": "html-contact-form-code/NiceSimpleContactForm/contactengine.php",
-          "output": "html-contact-form-code/NiceSimpleContactForm/contactengine.php",
-          "name": "contactengine.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
-        "c972045c": {
-          "id": "c972045c",
-          "path": "html-contact-form-code/NiceSimpleContactForm/contactthanks.php",
-          "output": "html-contact-form-code/NiceSimpleContactForm/contactthanks.php",
-          "name": "contactthanks.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
-        "c9a0813c": {
-          "id": "c9a0813c",
-          "path": "html-contact-form-code/NiceSimpleContactForm/index.html",
-          "output": "html-contact-form-code/NiceSimpleContactForm/index.html",
-          "name": "index.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "7d9b4551": {
-          "id": "7d9b4551",
-          "path": "html-contact-form-code/NiceSimpleContactForm/style.css",
-          "output": "html-contact-form-code/NiceSimpleContactForm/style-dist.css",
-          "name": "style.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "63a1ccfb": {
-          "id": "63a1ccfb",
-          "path": "html-contact-form-code/__MACOSX/NiceSimpleContactForm/._index.html",
-          "output": "html-contact-form-code/__MACOSX/NiceSimpleContactForm/._index.html",
-          "name": "._index.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "b2b75cb2": {
-          "id": "b2b75cb2",
-          "path": "_site/contactthanks.php",
-          "output": "_site/contactthanks.php",
-          "name": "contactthanks.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
-        "78530fea": {
-          "id": "78530fea",
-          "path": "_site/contactengine.php",
-          "output": "_site/contactengine.php",
-          "name": "contactengine.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
-        "32a20782": {
-          "id": "32a20782",
-          "path": "_site/thank-you.html",
-          "output": "_site/thank-you.html",
-          "name": "thank-you.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "e8454320": {
-          "id": "e8454320",
-          "path": "_site/img/bkg.jpg",
-          "output": "_site/img/bkg.jpg",
-          "name": "bkg.jpg",
-          "category": "IMAGE",
-          "size": 64479,
-          "type": "jpg",
-          "initialSize": 64479,
+          "initialSize": 47630,
           "optimized": false,
           "height": 0,
           "width": 0
@@ -238,15 +231,28 @@
           "height": 0,
           "width": 0
         },
-        "ce6dccf1": {
-          "id": "ce6dccf1",
-          "path": "_site/img/20-reducere-clienti-noi.png",
-          "output": "_site/img/20-reducere-clienti-noi.png",
-          "name": "20-reducere-clienti-noi.png",
+        "b63e775a": {
+          "id": "b63e775a",
+          "path": "_site/img/check.png",
+          "output": "_site/img/check.png",
+          "name": "check.png",
           "category": "IMAGE",
-          "size": 47630,
+          "size": 18610,
           "type": "png",
-          "initialSize": 47630,
+          "initialSize": 18610,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9a850e63": {
+          "id": "9a850e63",
+          "path": "_site/img/facebook-share.jpg",
+          "output": "_site/img/facebook-share.jpg",
+          "name": "facebook-share.jpg",
+          "category": "IMAGE",
+          "size": 553746,
+          "type": "jpg",
+          "initialSize": 553746,
           "optimized": false,
           "height": 0,
           "width": 0
@@ -263,72 +269,6 @@
           "optimized": false,
           "height": 0,
           "width": 0
-        },
-        "ff66e205": {
-          "id": "ff66e205",
-          "path": "_site/script.js",
-          "output": "_site/script-dist.js",
-          "name": "script.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "16d433f8": {
-          "id": "16d433f8",
-          "path": "_site/jquery.js",
-          "output": "_site/jquery-dist.js",
-          "name": "jquery.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "4e0f53d3": {
-          "id": "4e0f53d3",
-          "path": "responsive.sass",
-          "output": "_site/responsive.css",
-          "name": "responsive.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": true,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "01df7428": {
-          "id": "01df7428",
-          "path": "_site/responsive.css",
-          "output": "_site/responsive-dist.css",
-          "name": "responsive.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
         },
         "71f0ec9d": {
           "id": "71f0ec9d",
@@ -349,22 +289,9 @@
           "output": "_site/img/smile-emoji.jpg",
           "name": "smile-emoji.jpg",
           "category": "IMAGE",
-          "size": 12102,
+          "size": 12116,
           "type": "jpg",
-          "initialSize": 12102,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "9a850e63": {
-          "id": "9a850e63",
-          "path": "_site/img/facebook-share.jpg",
-          "output": "_site/img/facebook-share.jpg",
-          "name": "facebook-share.jpg",
-          "category": "IMAGE",
-          "size": 553746,
-          "type": "jpg",
-          "initialSize": 553746,
+          "initialSize": 12116,
           "optimized": false,
           "height": 0,
           "width": 0
